code/force-app/main/default/objects/Governance_Risk_Event__c/Governance_Risk_Event__c.object-meta.xml
<CustomObject>
    <label>公司治理風險事件</label>
    <nameField>
        <label>事件類別</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>