code/force-app/main/default/objects/Governance_Risk_Event__c/fields/Event_Content__c.field-meta.xml
<CustomField>
    <fullName>Event_Content__c</fullName>
    <label>事件內容</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>