code/force-app/main/default/objects/Governance_Risk_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>事件日期</label>
    <type>Date</type>
</CustomField>