code/force-app/main/default/objects/Governance_Risk_Event__c/fields/Event_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Event_Intensity__c</fullName>
    <label>事件強度</label>
    <length>30</length>
    <type>Text</type>
</CustomField>