code/force-app/main/default/objects/Governance_Risk_Event__c/fields/Governance_Risk_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Governance_Risk_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>公司治理風險事件外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>