code/force-app/main/default/objects/Governance_Risk_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Intensity__c</columns>
    <columns>Event_Content__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>